<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.accelhack.commons</groupId>
    <artifactId>model</artifactId>
    <version>1.0.2</version>
    <name>model</name>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <java.version>18</java.version>
        <org.springframework.spring-web.version>6.0.7</org.springframework.spring-web.version>
        <org.springframework.validation.version>3.0.4</org.springframework.validation.version>
        <com.google.guava.version>31.1-jre</com.google.guava.version>
        <com.fasterxml.jackson.core.version>2.15.0</com.fasterxml.jackson.core.version>
        <!--packages for compile-->
        <org.projectlombok.lombock.version>1.18.24</org.projectlombok.lombock.version>
        <!--packages for tests-->
        <junit.version>4.13.2</junit.version>
        <org.junit.jupiter.version>5.9.0</org.junit.jupiter.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${org.springframework.spring-web.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
            <version>${org.springframework.validation.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${com.google.guava.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${com.fasterxml.jackson.core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${com.fasterxml.jackson.core.version}</version>
        </dependency>
        <!--packages for compile-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${org.projectlombok.lombock.version}</version>
            <scope>compile</scope>
        </dependency>
        <!--packages for tests-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${org.junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Common Entity for AccelHack</name>
            <url>https://maven.pkg.github.com/accel-hack/java-model</url>
        </repository>
    </distributionManagement>
</project>
